src/tests/testfiles/function-call-parameter-type-8.txt
Error at 6:3: Number of arguments to function f does not match definition (have 0, need 1)
f();
^
